force-app/main/default/objects/OfferFilter__c/OfferFilter__c.object-meta.xml
<CustomObject>
    <description>Registros utilizado para gerenciar filtros do componente customizado de ofertas fixa e móvel</description>
    <label>Filtro de Oferta</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Nome do Filtro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filtro de Ofertas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>