force-app/main/default/objects/OfferFilter__c/fields/Cabinet__c.field-meta.xml
<CustomField>
    <fullName>Cabinet__c</fullName>
    <description>Código do armário</description>
    <label>Armário</label>
    <length>255</length>
    <type>Text</type>
</CustomField>