force-app/main/default/objects/OfferFilter__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Nome da cidade para aplicar o filtro de categoria cidade</description>
    <label>Cidade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>