force-app/main/default/objects/OfferFilter__c/fields/FilterCode__c.field-meta.xml
<CustomField>
    <fullName>FilterCode__c</fullName>
    <description>Código ou identificação do filtro</description>
    <label>Código do Filtro</label>
    <length>20</length>
    <type>Text</type>
</CustomField>