force-app/main/default/objects/OfferFilter__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <description>Opções de tecnologia utilizada pelo filtro de categoria cidade</description>
    <label>Technology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FTTC</fullName>
            </value>
            <value>
                <fullName>FTTH</fullName>
            </value>
            <value>
                <fullName>XDSL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>