force-app/main/default/objects/OfferFilter__c/recordTypes/Cabinet.recordType-meta.xml
<RecordType>
    <fullName>Cabinet</fullName>
    <active>true</active>
    <description>Para criar filtros de armários</description>
    <label>Armário</label>
</RecordType>