force-app/main/default/objects/OfferFilter__c/recordTypes/CityCategory.recordType-meta.xml
<RecordType>
    <fullName>CityCategory</fullName>
    <active>true</active>
    <description>Para criar filtros de categoria cidade</description>
    <label>Categoria Cidade</label>
</RecordType>