force-app/main/default/objects/OfferFilter__c/recordTypes/CityCategoryAndCabinet.recordType-meta.xml
<RecordType>
    <fullName>CityCategoryAndCabinet</fullName>
    <active>true</active>
    <description>Para criar filtros de categoria cidade e armários</description>
    <label>Categoria Cidade e Armário</label>
</RecordType>