force-app/main/default/objects/OfferFilter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>IsActive__c</columns>
    <columns>FilterCode__c</columns>
    <columns>StateCode__c</columns>
    <columns>City__c</columns>
    <columns>Technology__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>