force-app/main/default/objects/OfferFilter__c/listViews/CabinetsListView.listView-meta.xml
<ListView>
    <fullName>CabinetsListView</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>IsActive__c</columns>
    <columns>FilterCode__c</columns>
    <columns>StateCode__c</columns>
    <columns>City__c</columns>
    <columns>Technology__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>OfferFilter__c.Cabinet</value>
    </filters>
    <label>Códigos de Armários</label>
</ListView>